<resources>
    <string name="app_name">ATM</string>
    <string name="welcome_to_my_atm">Welcome to My ATM</string>
    <string name="add_cash">Add Cash</string>
    <string name="withdraw_cash">Withdraw Cash</string>
    <string name="add_new_denomination">Add New Denomination</string>
    <string name="invalidate_a_denomination">Invalidate a Denomination</string>
    <string name="content_description">content description</string>
    <string name="add_money_to_atm">Add Money to ATM</string>
    <string name="add">Add</string>
    <string name="enter_denomination_value">Enter Denomination Value</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="withdraw">Withdraw</string>
    <string name="collect_cash">Please collect you cash</string>
    <string name="no_money">Sorry No money</string>
    <string name="invalidate_denomination">Invalidate Denomination</string>
    <string name="no_money_denomination">There is no money in ATM.</string>
    <string name="check_balance_amp_denominations"><![CDATA[Check Balance & Denominations]]></string>
</resources>
